--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html>
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width" />
   <meta http-equiv="refresh" content="0;URL='./components/home/home.html'" />
-  <title>My test page</title>
 </head>
 
 </html>
