--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,17 @@
 <html>
 
 <head>
-  <meta http-equiv="refresh" content="0;URL='./components/home/home.html'" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
+
+<!-- TODO: Show logout button and username if logged in -->
+<body>
+  <form method="POST" action="components/login/login.html">
+    <button type="submit">Login</button>
+  </form>
+  <form method="POST" action="components/register/register.html">
+    <button type="submit">Register</button>
+  </form>
+</body>
 
 </html>
