Use contants from index.html instead of import

--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,11 @@
 
 <head>
   <link rel="stylesheet" href="styles.css" />
+  <script src="./modules/constants.js"></script>
 </head>
 
 <!-- TODO: Show logout button and username if logged in -->
+
 <body>
   <form method="POST" action="components/login/login.html">
     <button type="submit">Login</button>
